--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
   --primary-color: #0f1b4c;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -63,6 +68,7 @@ a {
   top: -26px;
   z-index: 1;
 }
+
 .hero-wrap {
   position: relative;
   display: flex;
